# ecoc-demo-2018

./: CHANGELOG  Makefile.am  README  configure.ac  report.txt  test-bulk-traffic  test-clear-traffic-generators-1  test-delay-symmetry-requirements  test-diff-net  test-dry-run  test-fusion-ep-to-np1-sm-buf-overflows  test-fusion-np-tx-gst-multicast-contentions  test-get-net-0  test-get-net-1  test-get-net-10  test-get-net-11  test-get-net-12  test-get-net-2  test-get-net-2-1  test-get-net-2-2  test-get-net-3  test-get-net-4  test-get-net-5  test-get-net-6  test-get-net-7  test-get-net-8  test-get-net-9  test-monitor  test-netconf-node-access  test-odl-clear-traffic-generators  test-odl-install  test-set-net-2-1  test-set-net-3  test-setup-fusion-streams  test-setup-fusion-streams-yangcli  test-setup-idle  test-setup-loopbacks  test-setup-network-bridge-yangcli  test-setup-traffic-analyzers  test-setup-traffic-analyzers-1  (+11 more)
bulk-traffic/: session.testapi.py
clear-traffic-generators/: session.testapi.py
common/: test-netconf-node-access.tntapi.py  test-traffic-generators-yangcli.py  testsuiteapi.py
debian/: changelog  control  copyright  install  postinst  rules
delay-symmetry-requirements/: session.testapi.py
diff-net/: run.sh
dry-run/: run.sh  session.local.yangcli.py  session.remote.yangcli.py
fusion-ep-to-np1-sm-buf-overflows/: session.testapi.py
fusion-np-tx-gst-multicast-contentions/: session.testapi.py
get-net/: run.sh
monitor/: index.html  report.py  run.sh  traffic-graphic-ecoc-demo
odl-clear-traffic-generators/: session.testapi.py
remove-traffic-generators/: session.testapi.py
(+18 files in other folders)
