TESTS= \
test-validate-topology-config \
test-netconf-node-access \
test-setup-idle \
test-setup-fusion-streams-yangcli \
test-get-net-1 \
test-setup-traffic-analyzers \
test-setup-loopbacks \
test-get-net-2-1 \
test-setup-traffic-generators \
test-get-net-3 \
test-diff-net \
test-set-net-2-1 \
test-get-net-2-2


#test-setup-fusion-streams
#test-delay-symmetry-requirements
#test-bulk-traffic
#test-fusion-np-tx-gst-multicast-contentions
#test-fusion-ep-to-np1-sm-buf-overflows
#test-userguide-complex-loopback

SUBDIRS=

#test-traffic-generators
