TESTS= \
test-netconf-node-access \
test-get-net-0 \
test-setup-idle \
test-get-net-1 \
test-setup-fusion-streams-yangcli \
test-setup-network-bridge-yangcli \
test-get-net-2 \
test-setup-loopbacks \
test-get-net-3 \
test-setup-traffic-analyzers-1 \
test-get-net-4 \
test-setup-traffic-generators-1 \
test-get-net-5 \
test-sleep-period-1 \
test-get-net-6 \
test-clear-traffic-generators-1 \
test-get-net-7 \
test-setup-traffic-analyzers-2 \
test-get-net-8 \
test-setup-traffic-generators-2 \
test-get-net-9 \
test-sleep-period-2 \
test-get-net-10 \
test-clear-traffic-generators-2 \
test-get-net-11 \
test-set-net-3 \
test-get-net-12 \
test-diff-net \
test-traffic-report \
test-traffic-graphic

#test-validate-topology-config
#test-setup-fusion-streams
#test-delay-symmetry-requirements
#test-bulk-traffic
#test-fusion-np-tx-gst-multicast-contentions
#test-fusion-ep-to-np1-sm-buf-overflows
#test-userguide-complex-loopback

SUBDIRS=

#test-traffic-generators
